sending the users endpoint
