# routes/index.js
@@ -3,5 +3,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/books', require('./books'));
+router.use('/users', require('./users'));
 
 module.exports = router;
